<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/app_description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description"/>
    <TextView
        android:id="@+id/play_content_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_content_name"/>
    <TextView
        android:id="@+id/dap_status_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dap_status"/>
    <TextView
        android:id="@+id/dap_profile_tv"
        android:text="@string/dap_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/dap_feature_type_tv"
        android:text="@string/dap_feature_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/dap_feature_value_tv"
        android:text="@string/dap_feature_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
</LinearLayout>
